new feature development

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -18,7 +18,7 @@ company:
 resume: "files/resume.pdf"
 
 # a summary about you
-summary: "Şu anda İstanbul Topkapı Üniversitesi'nde Yazılım Mühendisliği öğrenimime devam ediyorum. İnfina Yazılım şirketinde yazılım mühendisi olarak çalışıyorum. Takım çalışmasını seven, liderlik konusunda sorumluluk alabilen birisiyim. Gelişime açık, dinamik ve her zaman ideallerine ulaşmak için çabalayan bir Yazılım Mühendisi adayıyım."
+summary: "İnfina Yazılım şirketinde yazılım mühendisi olarak çalışıyorum. Bankacılık, borsa, aracı kurum, web ve  mobil uygulamarına ekranlar geliştiriyoruz. Takım çalışmasını seven, liderlik konusunda sorumluluk alabilen birisiyim. Gelişime açık, dinamik ve her zaman ideallerine ulaşmak için çabalayan bir Yazılım Mühendisiyim."
 # your social links
 # give as many as you want. use font-awesome for the icons.
 socialLinks:
