--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -10,24 +10,24 @@ section:
 
 ## Your experiences
 experiences:
-- company:
-    name: "SaveAs Yazılım "
-    url: "https://www.saveas.com.tr/"
-    location: "İstanbul"
-    overview: "Saveas Yazılım, yazılım geliştirme ve dijital dönüşüm hizmetleri veren bir teknoloji firmasıdır."
-  positions:
-  - designation: Software Engineer
-    start: Ocak 2023
-    end: Mart 2023
-    responsibilities:
-    - Uygulama hatalarının giderilmesi.
-    - Optimizasyonların yapılması.
+#- company:
+#    name: "SaveAs Yazılım "
+#    url: "https://www.saveas.com.tr/"
+#    location: "İstanbul"
+#    overview: "Saveas Yazılım, yazılım geliştirme ve dijital dönüşüm hizmetleri veren bir teknoloji firmasıdır."
+#  positions:
+#  - designation: Software Engineer
+#    start: Ocak 2023
+#    end: Mart 2023
+#    responsibilities:
+#    - Uygulama hatalarının giderilmesi.
+#    - Optimizasyonların yapılması.
 
 - company:
     name: "İnfina Yazılım A.Ş"
     url: "https://infina.com.tr/"
     location: "İstanbul"
-    overview: "İnfina Yazılım, varlık yönetimi ile portföy saklama yazılımları konusunda sektörünün lider firmasıdır. İnfina Yazılım A.Ş. ürünlerini piyasa talepleri doğrultusunda sürekli geliştirerek yatırım bankacılığı konusundaki faaliyetlerini inovatif yaklaşımıyla sürdürmeyi hedeflemektedir."
+    overview: "İnfina Yazılım, varlık yönetimi ile portföy saklama yazılımları konusunda sektörünün lider firmasıdır.Birçok banka ve borsaya hizmet vermektedir. Uçtan uca mobil uygulama geliştirme ve var olan bankacılık ve borsa uygulamalarına ekran ekleme gibi süreçlerde bulundum."
   positions:
   - designation: Software Engineer
     start: Mart 2023
@@ -35,8 +35,5 @@ experiences:
     responsibilities:
     - Foneva ile fon alım satım uygulaması
     - Suite Dlight analytics uygulaması
-    - Uygulama hatalarının giderilmesi.
-    - Yeni özelliklerin eklenmesi.
-    - Optimizasyonların yapılması.
-
-
+    - Trive borsa uygulamasına ekran geliştirmeleri.
+    - Deploy süreçlerinin yönetilmesi ve CI-CD süreçlerinin optimizasyonu.
