--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -45,7 +45,7 @@ projects:
   timeline: "August 2023 -  Continues"
   repo: https://www.trive.com.tr/ # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Trive, Birçok hisse senedi, fon, altın, petrol gibi menkul kıymetleri içerisinde bulunduran bir borsadır. Bu borsa uygulamasına yapay zeka ile kullanıcının risk porfiline göre yatırım yapmasını sağlayan robo danışman, fonları kategorize eden fon dünyası, alım-satım emirlerini gördüğü emirlerim sayfası ve kullanıcının portföy dağılımını görebileceği fon portföyüm ekranlarını android/ios mobil uygulamalarına entegre ediyorum.
+  summary:  Trive mobil uygulamasına yapay zeka ile kullanıcının risk porfiline göre yatırım yapmasını sağlayan robo danışman, fonları kategorize eden fon dünyası, kullanıcının alım-satım emirlerini gördüğü emirlerim sayfası ve portföy dağılımını görebileceği fon portföyüm ekranlarını android/ios mobil uygulamalarına entegre ediyorum.
   tags: ["React Native", "Swift", "Java"]
   
 
