--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -28,17 +28,8 @@ projects:
   timeline: "June 2023 -  november 2023"
   repo: https://www.fibabanka.com.tr/ # If your project is a public repo on GitHub, then provide this link. it will show star count.
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary: Fibabanka internet şube Fon Market SDK'sına öneri alma, geçmiş öneri hesaplama ve dağılımları görüntüleme ekranlarını entegre ettim 
-  tags: ["React Native", Spring Boot"]
-
-- name: Trive
-  logo: /images/sections/projects/trive.png
-  role: Software Engineer
-  timeline: "August 2023 -  Continues"
-  repo: https://www.trive.com.tr/ # If your project is a public repo on GitHub, then provide this link. it will show star count.
-  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
-  summary:  Trive mobil uygulamasına yapay zeka ile kullanıcının risk porfiline göre yatırım yapmasını sağlayan robo danışman, fonları kategorize eden fon dünyası, kullanıcının alım-satım emirlerini gördüğü emirlerim sayfası ve portföy dağılımını görebileceği fon portföyüm ekranlarını android/ios mobil uygulamalarına entegre ediyorum.
-  tags: ["React Native", "Swift", "Java"]
+  summary: Fibabanka internet şube Fon Market SDK'sına öneri alma, geçmiş öneri hesaplama ve dağılımları görüntüleme ekranlarını entegre ettim .
+  tags: ["React Native", "Spring Boot"]
 
 - name: Foneva
   logo: /images/sections/projects/Foneva.png
@@ -48,5 +39,14 @@ projects:
   #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
   summary: Foneva, bir fon alım-satım uygulamasıdır. ios ve android için geliştirmeler yaptım, bu projede yazılım mühendisi olarak görev aldım. Projeye yeni özellikler eklemek ve mevcut hataları düzeltmek gibi sorumluluklarım vardı.
   tags: ["React Native", "Java", "Spring Boot"]
+
+- name: Trive
+  logo: /images/sections/projects/trive.png
+  role: Software Engineer
+  timeline: "August 2023 -  Continues"
+  repo: https://www.trive.com.tr/ # If your project is a public repo on GitHub, then provide this link. it will show star count.
+  #url: ""  # If your project is not a public repo but it has a website or any external details url then provide it here. don't provide "repo" and "url" simultaneously.
+  summary:  Trive mobil uygulamasına kullanıcının risk porfiline göre yatırım yapmasını sağlayan robo danışman, fonları kategorize eden fon dünyası, kullanıcının alım-satım emirlerini gördüğü emirlerim sayfası ve portföy dağılımını görebileceği fon portföyüm ekranlarını android/ios mobil uygulamalarına entegre ediyorum.
+  tags: ["React Native", "Swift", "Java"]
 
 
