--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -22,7 +22,7 @@ buttons:
 # your projects
 projects:
 
-- name: Fibabanka İnternet Şube
+- name: Fibabanka İnternet Bankacılığı
   logo: /images/sections/projects/fiba.png
   role: Software Engineer
   timeline: "June 2023 -  november 2023"
