--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -33,7 +33,10 @@ experiences:
     start: Mart 2023
     end: Devam
     responsibilities:
-    - Foneva ile fon alım satım uygulaması
-    - Suite Dlight analytics uygulaması
-    - Trive borsa uygulamasına ekran geliştirmeleri.
+    - Fibabanka Fon Market geliştirme ve bakım
+    - Burganbank Fon Evreni ve Robo geliştirme ve bakım
+    - Collendi Otp geliştirme ve bakım
+    - Aktifbank N KOLAY ROBO geliştirme ve bakım
+    - Misyon Yatırım Bankası Fon Market geliştirme ve bakım
+    - Türkiye Ürün Merkez Piyasası geliştirme ve bakım
     - Deploy süreçlerinin yönetilmesi ve CI-CD süreçlerinin optimizasyonu.
