--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -36,7 +36,7 @@ experiences:
     - Fibabanka Fon Market geliştirme ve bakım
     - Burganbank Fon Evreni ve Robo geliştirme ve bakım
     - Collendi Otp geliştirme ve bakım
-    - Aktifbank n kolay robo geliştirme ve bakım
+    - Aktifbank N KOLAY robo geliştirme ve bakım
     - Misyon Yatırım Bankası Fon Market geliştirme ve bakım
     - Türkiye Ürün Merkez Piyasası geliştirme ve bakım
     - Deploy süreçlerinin yönetilmesi ve CI-CD süreçlerinin optimizasyonu.
