email adress changed

--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -24,7 +24,7 @@ summary: "İnfina Yazılım şirketinde yazılım mühendisi olarak çalışıyo
 socialLinks:
 - name: Email
   icon: "fas fa-envelope"
-  url: "mehmetaliozdogan@stu.topkapi.edu.tr"
+  url: "ozdogan.7547@gmail.com"
 
 - name: Github
   icon: "fab fa-github"
