--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -6,7 +6,7 @@ greeting: "Merhaba, Ben"
 image: "images/author/john.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "mehmetaliozdogan@stu.topkapi.edu.tr"
+  email: "ozdogan.7547@gmail.com"
 
 # some summary about what you do
 summary:
