--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -35,7 +35,7 @@ experiences:
     responsibilities:
     - Fibabanka Fon Market geliştirme ve bakım
     - Burganbank Fon Evreni ve Robo geliştirme ve bakım
-    - Collendi Otp geliştirme ve bakım
+    - Colendi Onay geliştirme ve bakım
     - Aktifbank N KOLAY robo geliştirme ve bakım
     - Misyon Yatırım Bankası Fon Market geliştirme ve bakım
     - Türkiye Ürün Merkez Piyasası geliştirme ve bakım
