--- a/config.yaml
+++ b/config.yaml
@@ -33,7 +33,7 @@ outputs:
   - JSON
 
 # Enable Google Analytics
-googleAnalytics:
+googleAnalytics: G-STZXGV0BN2
 
 # Enable global emoji support
 enableEmoji: true
